# oiler

./: Cargo.toml
benches/: euler_benchmarks.rs
src/: euler.rs  main.rs
tests/: euler_tests.rs
